after creating models file

--- a/events/templates/home.html
+++ b/events/templates/home.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
 <body>
-    <h1 class="text-3xl">Welcome</h1>
+    <h1 class="text-3xl">Welcome| Dashboard nav bar here</h1>
     <div class="test_design">
 
         <h2 class="text-6xl">This is the event management system home page. </h2>
+        <p>Company name, company theme line, a good bg image preferably</p>
     </div>
-    <p class="text-lg italic text-green-500">Testing tailwind integration</p>
+    <p class="text-lg italic text-green-500 text-center">Search button here. </p>
     <div class="text-indigo-700 bg-gray-500 w-9/12 h-72 text-center">
         <p>Again testing tailwind integration</p>
+        <p>All events shown here. </p>
     </div>
 </body>
 </html>
