--- a/core/templates/logged_nav.html
+++ b/core/templates/logged_nav.html
@@ -15,7 +15,7 @@
         <div >
             <ul class="flex justfiy-evenly gap-x-4 ">
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href=""></a>Events</li>
+                <li><a href="{% url 'organizer-dashboard' %}">Events</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Pages</a></li>
                 <li><a href="">About Us</a></li>
@@ -27,6 +27,7 @@
                         <li><a href="{% url 'create-event' %}">Event</a></li>
                         <li><a href="{% url 'create-participant' %}">Participant</a></li>
                         <li><a href="{% url 'create-category' %}">Category</a></li>
+                        <li><a href="{% url 'create-group' %}">Group</a></li>
                     </ul>
                    
                     
@@ -37,9 +38,17 @@
         <div class="icon_home flex gap-x-3">
             
               
-            <div class="home_btn  bg-sky-500 rounded-full w-7 p-0.5 text-center">
-                <p class="text-white">B</p>
+            <div class="home_btn  bg-sky-500 rounded  p-1 text-center">
+                <form method="POST" action="{% url 'sign-out' %}">
+                    {% csrf_token %}
+                    <button>
+                      Logout
+                    </button>
+                {% comment %} <a href="{% url 'sign-out' %}"class="text-white">Sign Out</a> {% endcomment %}
+                {% comment %} <p class="text-white">Sign Out</p> {% endcomment %}
+                </form>
             </div>
+            
         </div>
     </section>
 </body>
