--- a/events/templates/dashboard.html
+++ b/events/templates/dashboard.html
@@ -1,19 +1,9 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'css/output.css' %}">
-</head>
-<body>
-    {% comment %} Navbar section {% endcomment %}
-    {% include "nav_bar.html" %}
-
+{% extends "base.html" %}
+{% block title %}Dashboard{% endblock title %}
+{% block content %}
     {% comment %} Stats grid section {% endcomment %}
     <section class="progress grid grid-cols-2 sm:grid-cols-4 gap-4">
-        <a href="{% url 'dashboard' %}?type=participants">
+        <a href="{% url 'organizer-dashboard' %}?type=participants">
             <div class="progress_card bg-white p-2 rounded-lg border border-black">
                 <h3 class="card_heading text-sm mb-2">Total Participants</h3>
                 <div class="card_body flex justify-between">
@@ -30,7 +20,7 @@
                 </div>
             </div>
         </a>
-        <a href="{% url 'dashboard' %}?type=total">
+        <a href="{% url 'organizer-dashboard' %}?type=total">
             <div class="progress_card bg-white p-2 rounded-lg border border-black">
                 <h3 class="card_heading text-sm mb-2">Total Events</h3>
                 <div class="card_body flex justify-between">
@@ -48,7 +38,7 @@
                 </div>
             </div>
         </a>
-        <a href="{% url 'dashboard' %}?type=upcoming">
+        <a href="{% url 'organizer-dashboard' %}?type=upcoming">
             <div class="progress_card bg-white p-2 rounded-lg border border-black ">
                 <h3 class="card_heading text-sm mb-2">Upcoming Events</h3>
                 <div class="card_body flex justify-between">
@@ -66,7 +56,7 @@
                 </div>
             </div>
         </a>
-        <a href="{% url 'dashboard' %}?type=past">
+        <a href="{% url 'organizer-dashboard' %}?type=past">
             <div class="progress_card bg-white p-2 rounded-lg border border-black ">
                 <h3 class="card_heading text-sm mb-2">Past Events</h3>
                 <div class="card_body flex justify-between">
@@ -106,6 +96,13 @@
             <div class="flex items-center gap-1">
                <div class="list_style w-1 h-1 bg-green-600 rounded-full "></div>
                <p class="font-semibold">{{event.name}}</p>
+               <div class="home_btn  bg-sky-500 rounded  p-1 text-center">
+
+                   <form action="{% url 'rsvp-event' event.id %}" method="POST">
+                    {% csrf_token %}
+                    <button type="submit">RSVP</button>
+                   </form>
+               </div>
             </div>
             <div class="flex items-center">
                <div class=" bg-blue-200 w-fit p-1 rounded-md ">
@@ -116,7 +113,7 @@
             <div class="flex gap-1 text-center -space-x-3 text-white">
                
                 <div class="list_style w-6 h-6 bg-green-600 rounded-full border border-white self-center flex items-center justify-center ">
-                     <p >{{event.participant_list.all.count}}</p>
+                     <p >{{event.participants.all.count}}</p>
                  </div>
                 
                 
@@ -133,8 +130,4 @@
             </div>
         </div>
         {% endfor %}
-        
-    </div>
-    
-</body>
-</html>
+{% endblock content %}
