mid time without password settings

--- a/core/templates/logged_nav.html
+++ b/core/templates/logged_nav.html
@@ -32,6 +32,7 @@
                    
                     
                 </li>
+                <li><a href="{% url 'user-profile' %}">Profile</a></li>
             </ul>
             
         </div>
