--- a/users/templates/admin/admin_dashboard.html
+++ b/users/templates/admin/admin_dashboard.html
@@ -56,6 +56,24 @@
                 </div>
             </div>
         </a>
+        <a href="{% url 'category-list' %}">
+            <div class="progress_card bg-white p-2 rounded-lg border border-black ">
+                <h3 class="card_heading text-sm mb-2">Categories</h3>
+                <div class="card_body flex justify-between">
+                    <div class="text_side">
+                        <p class="text-xl font-semibold"></p>
+                        
+                    </div>
+                    <div class="icon_side w-7  flex justify-center ">
+                        
+                        
+                    <!-- icon ke padding diye backgournd color apply korsi
+                    and border rounded korsi -->
+                    <!-- parent div ke flex kore justify content k center e anchi, ete icon center e asche -->
+                    </div>
+                </div>
+            </div>
+        </a>
         
     </section>
 </div>
