mid term submission ready without the design

--- a/users/templates/accounts/password_change.html
+++ b/users/templates/accounts/password_change.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Log In{% endblock title %}
+{% block title %}Password Change{% endblock title %}
 {% block content %}
     <div>
         {% comment %} for non-field errors {% endcomment %}
@@ -20,8 +20,11 @@
         <form action="" method="POST">
             {% csrf_token %}
             {{form.as_p}}
-            <button type="submit">Submit</button>
+            <button 
+                type="submit"
+                class="mt-4 px-4 py-2 text-white rounded-lg bg-blue-500 hover:bg-blue-600">
+                Submit
+            </button>
         </form>
-        <a href='{% url "password-reset" %}'>Forgot Password?</a>
     </div>
 {% endblock content %}
