--- a/users/templates/registration/reset_password.html
+++ b/users/templates/registration/reset_password.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Log In{% endblock title %}
+{% block title %}Reset Password{% endblock title %}
 {% block content %}
     <div>
         {% comment %} for non-field errors {% endcomment %}
@@ -22,6 +22,6 @@
             {{form.as_p}}
             <button type="submit">Submit</button>
         </form>
-        <a href='{% url "password-reset" %}'>Forgot Password?</a>
+        
     </div>
 {% endblock content %}
