--- a/core/templates/logged_nav.html
+++ b/core/templates/logged_nav.html
@@ -7,31 +7,32 @@
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
-<body>
-    <section class="dashboard flex justify-between mb-3 bg-slate-200 p-5">
+<body class=''>
+    <section class="dashboard flex justify-between mb-3 bg-slate-200 p-4">
         <h1 class="text-xl font-semibold">
-            <a href="{% url 'home' %}">Event</a></li>
+            <a href="{% url 'home' %}">Event</a>
         </h1>
         <div >
-            <ul class="flex justfiy-evenly gap-x-4 ">
+            <ul class="flex space-x-4 font-semibold relative ">
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'organizer-dashboard' %}">Events</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Pages</a></li>
                 <li><a href="">About Us</a></li>
-                <a href="{% url 'dashboard' %}">Dashboard</a>
-                <li class="group relative" >
-                    <a href="">Create</a>
-                    {% comment %} <div class="bg-blue-500 overflow-hidden border-4 border-indigo-600">Create {% endcomment %}
-                    <ul class="hidden group-hover:block">
-                        <li><a href="{% url 'create-event' %}">Event</a></li>
+                <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
+                <li class="relative group" >
+                    <a href="#" class="cursor-pointer">Create</a>
+                    
+                    <ul class="absolute left-0 mt-2  group-hover:block w-40 bg-white border border-gray-200 rounded-md shadow-lg z-50 ">
+                        
+                        <li><a href="{% url 'create-event' %}" class="block px-4 py-2 hover:bg-gray-100">Event</a></li>
                         <li><a href="{% url 'create-participant' %}">Participant</a></li>
                         <li><a href="{% url 'create-category' %}">Category</a></li>
                         <li><a href="{% url 'create-group' %}">Group</a></li>
-                    </ul>
-                   
+                    </ul> 
                     
                 </li>
+                
                 <li><a href="{% url 'user-profile' %}">Profile</a></li>
             </ul>
             
@@ -39,10 +40,10 @@
         <div class="icon_home flex gap-x-3">
             
               
-            <div class="home_btn  bg-sky-500 rounded  p-1 text-center">
+            <div class="home_btn  text-center">
                 <form method="POST" action="{% url 'sign-out' %}">
                     {% csrf_token %}
-                    <button>
+                    <button class='px-2 py-1 rounded-md  bg-sky-500 hover:bg-blue-600'>
                       Logout
                     </button>
                 {% comment %} <a href="{% url 'sign-out' %}"class="text-white">Sign Out</a> {% endcomment %}
