--- a/users/templates/accounts/profile.html
+++ b/users/templates/accounts/profile.html
@@ -4,7 +4,7 @@
     <div >
         <p><a href="{% url 'user-dashboard' %}" title='User Dashboard'>Your Events</a></p>
         <p><a href="{% url 'update-profile' id %}">Update Profile</a></p>
-        <p>Change Password</p>
+        <p><a href="{% url "password-change" %}">Change Password</a></p>
     </div>
     <div class=' bg-cyan-100'>
         <div class="m-3">
@@ -24,9 +24,13 @@
         </div>
         <div class="flex justify-evenly m-4">
 
-            <h3 class="bg-violet-600 p-2 text-white rounded-md">Phone Number: {{phone_number}}</h3>
+            <h3 class="bg-violet-600 p-2 text-white rounded-md">
+                Phone Number: {{phone_number}}
+            </h3>
             <div class="bg-violet-600 p-2 text-white rounded-md"></div>
-            <div class="bg-violet-600 p-2 text-white rounded-md">Member Since:  {{member_since}}</div>
+            <div class="bg-violet-600 p-2 text-white rounded-md">
+                Member Since:  {{member_since}}
+            </div>
         </div>
         <div>
             
