submitting mid term exam

--- a/core/templates/non_logged_nav.html
+++ b/core/templates/non_logged_nav.html
@@ -13,7 +13,7 @@
             <a href="{% url 'home' %}">Event</a></li>
         </h1>
         <div >
-            <ul class="flex justfiy-evenly gap-x-4 ">
+            <ul class="flex justify-around gap-x-4 ">
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href=""></a>Events</li>
                 <li><a href="">Gallery</a></li>
