--- a/users/templates/admin/admin_dashboard.html
+++ b/users/templates/admin/admin_dashboard.html
@@ -1,14 +1,21 @@
 {% extends "base.html" %}
 {% block title %}Admin Dashboard{% endblock title %}
 {% block content %}
-<div class="w-1/2 mx-auto border-2 border-black">
-    <section class="progress grid grid-cols-2 sm:grid-cols-4 gap-4 justify-between">
+{% comment %} Each Progress Card has a heading, a value and icon {% endcomment %}
+<div class="w-1/2 mx-auto my-4">
+    <h1 class="text-xl font-bold">Hello Admin</h1>
+    <h2 class="text-lg font-bold">Manage your platform</h2>
+</div>
+<div class="w-3/4 mx-auto border-2 border-black p-4 bg-gray-50">
+    <section class="progress grid grid-cols-2 sm:grid-cols-4 gap-6 justify-between">
         <a href="{% url 'user-list' %}">
-            <div class="progress_card bg-white p-2 rounded-lg border border-black">
-                <h3 class="card_heading text-sm mb-2">Total Participants</h3>
+            <div class="progress_card bg-gray-200 p-2 rounded-md border-2 border-black shadow-xl">
+                <h3 class="card_heading text-md mb-2 font-bold">Total Participants</h3>
+                {% comment %} Value and Icon {% endcomment %}
                 <div class="card_body flex justify-between">
                     <div class="text_side">
-                        <p class="text-xl font-semibold">{{event_count.unique_participants}}</p>
+                        {% comment %} <p class="text-xl font-semibold">{{event_count.unique_participants}}</p> {% endcomment %}
+                        <p class="text-xl font-semibold">{{contents.participants.count}}</p>
                         
                     </div>
                     <div class="icon_side w-7  flex justify-center ">
@@ -21,11 +28,11 @@
             </div>
         </a>
         <a href="{% url 'organizer-dashboard' %}">
-            <div class="progress_card bg-white p-2 rounded-lg border border-black">
-                <h3 class="card_heading text-sm mb-2">Events</h3>
+            <div class="progress_card  bg-gray-200 p-2 rounded-md border-2 border-black shadow-xl">
+                <h3 class="card_heading text-md mb-2 font-bold">Events</h3>
                 <div class="card_body flex justify-between">
                     <div class="text_side">
-                        <p class="text-xl font-semibold"></p>
+                        <p class="text-xl font-semibold">{{contents|length}}</p>
                         
                     </div>
                     <div class="icon_side w-7  flex justify-center ">
@@ -39,11 +46,11 @@
             </div>
         </a>
         <a href="{% url 'group-list' %}">
-            <div class="progress_card bg-white p-2 rounded-lg border border-black ">
-                <h3 class="card_heading text-sm mb-2">Groups</h3>
+            <div class="progress_card  bg-gray-200 p-2 rounded-md border-2 border-black shadow-xl ">
+                <h3 class="card_heading text-md mb-2 font-bold">Groups</h3>
                 <div class="card_body flex justify-between">
                     <div class="text_side">
-                        <p class="text-xl font-semibold"></p>
+                        <p class="text-xl font-semibold">{{group_count}}</p>
                         
                     </div>
                     <div class="icon_side w-7  flex justify-center ">
@@ -57,11 +64,11 @@
             </div>
         </a>
         <a href="{% url 'category-list' %}">
-            <div class="progress_card bg-white p-2 rounded-lg border border-black ">
-                <h3 class="card_heading text-sm mb-2">Categories</h3>
+            <div class="progress_card  bg-gray-200 p-2 rounded-md border-2 border-black shadow-xl">
+                <h3 class="card_heading text-md mb-2 font-bold">Categories</h3>
                 <div class="card_body flex justify-between">
                     <div class="text_side">
-                        <p class="text-xl font-semibold"></p>
+                        <p class="text-xl font-semibold">{{category_count}}</p>
                         
                     </div>
                     <div class="icon_side w-7  flex justify-center ">
