--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,43 +1,56 @@
 {% extends "base.html" %}
 {% block content %}
+    {% comment %} Heading and Hero Section {% endcomment %}
     <div class="test_design w-full text-center p-5 bg-cyan-200">
 
         <h2 class="text-8xl">THE EVENT </h2>
         <p class="text-3xl">Seamless Events, Unforgettable Moments</p>
     </div>
-    <div>
-        <form action="" class="m-4 text-center">
-            <input type="text" class="border-4">
-            <button type="submit" class="bg-violet-600 text-white p-2">Search</button>
+    {% comment %} Search Bar {% endcomment %}
+    <div class="bg-gray-50 w-3/4 mx-auto rounded-sm shadow-xl p-2 ">
+        <form action="" class="m-4 text-center" method="POST">
+            {% csrf_token %}
+            <input 
+                type="text" 
+                name="search" 
+                class="border-4 p-2 rounded-md" 
+                placeholder="Search Value">
+            <select name="search_type" id="">
+                <option value="">Search By</option>
+                <option value="event">Event</option>
+                <option value="category">Category</option>
+            </select>
+            <button type="submit" 
+                class="bg-violet-600 text-white p-2 rounded-md">Search</button>
         </form>
     </div>
     {% comment %} <p class="text-lg italic text-green-500 text-center">Search button here. </p> {% endcomment %}
-    <div class="all_task bg-white  rounded-lg p-3 mt-3">
+    <div class="all_task bg-gray-50 border-black border-2 w-5/6 mx-auto rounded-lg p-3 mt-3 ">
            
-        <div class="all_task_body grid grid-cols-4 gap-1 text-lg font-bold">
+        <div class="all_task_body grid grid-cols-4 gap-1 text-lg font-bold bg-cyan-200 shadow-xl py-4">
             <!-- <div class="task_body_heading"></div> -->
              <p>Event Name</p>
              <p>Category</p>
              <p>Participants</p>
              <p>Do More</p>
         </div>
-        
+        {% comment %} Event List {% endcomment %}
         {% for event in events %}
-        <div class="grid grid-cols-4 gap-2 text-sm mt-6">
+        <div class="grid grid-cols-4 gap-2 text-sm mt-6 border border-gray-300 shadow-lg py-2 rounded-md">
 
             <div class="flex items-center gap-1">
-               <div class="list_style w-1 h-1 bg-green-600 rounded-full "></div>
+               <div class="list_style flex justify-center items-center w-2 h-2 bg-green-600 rounded-full "></div>
                <p>{{event.name}}</p>
             </div>
             <div class="flex items-center">
-               <div class=" bg-blue-200 w-fit p-0.5 rounded-md ">
+               <div class=" bg-blue-200 w-fit py-1 px-2 rounded-md ">
                    <p>{{event.category}}</p>
 
                </div>
             </div>
             <div class="flex gap-1 text-center -space-x-3 text-white">
                
-                <div class="list_style w-6 h-6 bg-green-600 rounded-full border border-white self-center flex items-center justify-center ">
+                <div class="list_style w-8 h-8 bg-green-600 rounded-full border border-white self-center flex items-center justify-center ">
                      <p >{{event.participants.all.count}}</p>
                  </div>
                 
