--- a/users/templates/admin/group_list.html
+++ b/users/templates/admin/group_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-      <h2 class="text-2xl font-bold mb-4">Groups and Permissions</h2>
+      <h2 class="text-3xl font-bold mb-4 text-center">Groups and Permissions</h2>
       <div class="overflow-x-auto w-1/2 mx-auto border border-black p-5"">
         <table class="table-auto w-full border-collapse border border-gray-300">
           <thead>
